@@ -14,16 +14,10 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <sigtest.plugin.version>1.6</sigtest.plugin.version>
-        <failsafe.plugin.jdk17.args/>
-        <signature.sigTestClasspath />
-        <payara.home></payara.home>
-        <payara.json-bind-api.jar>${payara.home}/glassfish/modules/jakarta.json.bind-api.jar</payara.json-bind-api.jar>
-        <payara.arquillian.container.version>3.0.alpha3</payara.arquillian.container.version>
-        <jsonb.api.version>3.0.0</jsonb.api.version>
-        <jimage.dir>${project.build.directory}/jdk-bundle</jimage.dir>
+        <payara.json-bind-api.jar>${payara.home}${file.separator}glassfish${file.separator}modules${file.separator}jakarta.json.bind-api.jar</payara.json-bind-api.jar>
+        <jsonb.api.version>3.0.1</jsonb.api.version>
+        <jsonb.tck.version>3.0.0</jsonb.tck.version>
+        <jimage.dir>${project.build.directory}${file.separator}jdk-bundle</jimage.dir>
     </properties>
 
     <repositories>
@@ -42,50 +36,23 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.jboss.arquillian</groupId>
-                <artifactId>arquillian-bom</artifactId>
-                <version>1.7.0.Alpha10</version>
-                <scope>import</scope>
-                <type>pom</type>
-            </dependency>
-            <dependency>
-                <groupId>org.junit</groupId>
-                <artifactId>junit-bom</artifactId>
-                <version>5.8.2</version>
-                <scope>import</scope>
-                <type>pom</type>
-            </dependency>
-            <dependency>
                 <groupId>jakarta.json.bind</groupId>
                 <artifactId>jakarta.json.bind-api</artifactId>
-                <version>3.0.0</version>
+                <version>${jsonb.api.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
 
     <dependencies>
-
-        <!-- TCKs -->
+        <!-- TCK -->
         <dependency>
             <groupId>jakarta.json.bind</groupId>
             <artifactId>jakarta.json.bind-tck</artifactId>
-            <version>3.0.0</version>
+            <version>${jsonb.tck.version}</version>
             <scope>test</scope>
         </dependency>
 
-        <!-- Arquillian Remote Payara server -->
-        <dependency>
-            <groupId>fish.payara.arquillian</groupId>
-            <artifactId>arquillian-payara-server-remote</artifactId>
-            <version>${payara.arquillian.container.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>fish.payara.arquillian</groupId>
-            <artifactId>payara-client-ee9</artifactId>
-            <version>${payara.arquillian.container.version}</version>
-            <scope>test</scope>
-        </dependency>
+        <!-- Arquillian Junit container -->
         <dependency>
             <groupId>org.jboss.arquillian.junit5</groupId>
             <artifactId>arquillian-junit5-container</artifactId>
@@ -116,21 +83,15 @@
 
         <!-- hidden runtime dependencies of arquillian container -->
         <dependency>
+            <groupId>fish.payara.arquillian</groupId>
+            <artifactId>payara-client-ee11</artifactId>
+            <version>${payara.arquillian.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>jakarta.enterprise</groupId>
             <artifactId>jakarta.enterprise.cdi-api</artifactId>
-            <version>3.0.0</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.parsson</groupId>
-            <artifactId>parsson</artifactId>
-            <version>1.1.0</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.parsson</groupId>
-            <artifactId>parsson-media</artifactId>
-            <version>1.1.0</version>
+            <version>${cdi.api.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -139,8 +100,55 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <!-- https://github.com/jakartaee/jsonb-api/issues/330 -->
+                        <id>add-jvm-option-workaround</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <target unless="skip.server.config">
+                                <exec executable="${payara.asadmin}">
+                                    <arg value="create-jvm-options" />
+                                    <arg value="-Djava.locale.providers=COMPAT" />
+                                </exec>
+                                <exec executable="${payara.asadmin}">
+                                    <arg value="restart-domain" />
+                                    <arg value="${payara.domain}" />
+                                </exec>
+                            </target>
+                        </configuration>
+                    </execution>
+                </executions>
+                <configuration>
+                    <skip>${skipTests}</skip>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>run-tests</id>
+                        <phase>integration-test</phase>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <dependenciesToScan>
                         <dependency>jakarta.json.bind:jakarta.json.bind-tck</dependency>
@@ -148,10 +156,13 @@
                     <excludes>
                         <exclude>JSONBSigTest*</exclude>
                     </excludes>
+                    <includes>
+                        <include>*</include>
+                    </includes>
                     <systemPropertyVariables>
                         <junit.jupiter.extensions.autodetection.enabled>true</junit.jupiter.extensions.autodetection.enabled>
                         <jimage.dir>${jimage.dir}</jimage.dir>
-                        <signature.sigTestClasspath>${payara.json-bind-api.jar}${path.separator}${jimage.dir}/java.base${path.separator}${jimage.dir}/java.rmi${path.separator}${jimage.dir}/java.sql${path.separator}${jimage.dir}/java.naming</signature.sigTestClasspath>
+                        <signature.sigTestClasspath>${payara.json-bind-api.jar}${path.separator}${jimage.dir}${file.separator}java.base${path.separator}${jimage.dir}${file.separator}java.rmi${path.separator}${jimage.dir}${file.separator}java.sql${path.separator}${jimage.dir}${file.separator}java.naming</signature.sigTestClasspath>
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
